<resources>

    <string name="app_name">Gibbet</string>

<!--Buttons and their strings-->

    <string name="btn_hangman">Play</string>
    <string name="message_Hang">Play Hangman</string>

    <string name="btn_wordoftheday">Word of the Day</string>
    <string name="message_wotd">Play the Word of the Day</string>

    <string name="btn_settings">Settings</string>
    <string name="message_settings">User Settings</string>

<!--    Settings activity strings-->

    <string name="action_settings">Settings</string>

    <string name="pref_category_hangman">Game Settings</string>

    <string name="pref_tries_title">Number of guesses per game</string>
    <string name="pref_letter_count_title">Max number of letters per word</string>

    <string name="pref_tries_key" translatable="false">tries</string>
    <string name="pref_letter_count_key" translatable="false">maxLength</string>

<!--    Game activity strings-->

    <string name="guess_hint">Type a letter...</string>
    <string name="end_game">End game</string>
    <string name="guess_prompt">Guess: </string>
    <string name="guess_button">Make Guess</string>
    <string name="incorrect_guesses">Incorrect Guesses: </string>

    <string name="btn_play_again">Play Again</string>
    <string name="btn_define">Define</string>
    <string name="btn_menu">Menu</string>

    <string name="api_error">API error, try again</string>
    <string name="definition">%1$s definition</string>

    <string name="search_error">No browser installed on device.</string>

    <string name="guesses_left">Guesses left: %1$d</string>
    <string name="win_msg">You Win!</string>
    <string name="lose_msg">You Lose</string>

</resources>