<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mountainbackground_1"
    android:orientation="vertical"
    tools:context="ui.MainActivity">

    <TextView
        android:id="@+id/game_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:fontFamily=""
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3" />

    <LinearLayout
        android:id="@+id/main_menu_buttons"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_play"
            android:layout_width="200dp"
            android:layout_height="68dp"
            android:textSize="16sp"
            android:text="@string/btn_hangman"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_wotd"
            android:layout_width="200dp"
            android:layout_height="68dp"
            android:textSize="16sp"
            android:text="@string/btn_wordoftheday"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_settings"
            android:layout_width="200dp"
            android:layout_height="68dp"
            android:textSize="16sp"
            android:text="@string/btn_settings"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

</LinearLayout>