<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mountainbackground_1"
    android:orientation="vertical"
    tools:context=".ui.EndScreenActivity">

<!--    <androidx.appcompat.widget.Toolbar-->
<!--        android:id="@+id/toolbar"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="?attr/colorPrimary"-->
<!--        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar" />-->

    <TextView
        android:id="@+id/game_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="Hangman"
        android:textColor="@color/black"
        android:fontFamily=""
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3" />

    <LinearLayout
        android:id="@+id/end_screen_buttons"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_play_again"
            android:layout_width="200dp"
            android:layout_height="68dp"
            android:textSize="16dp"
            android:text="@string/btn_play_again"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_define"
            android:layout_width="200dp"
            android:layout_height="68dp"
            android:textSize="16dp"
            android:text="@string/btn_define"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_menu"
            android:layout_width="200dp"
            android:layout_height="68dp"
            android:textSize="16dp"
            android:text="@string/btn_menu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

</LinearLayout>